reflect-demo/tests/errors/invalid_reflect_type_lifetime_generic2.rs
#[derive(reflect::Input, reflect::Output)]
struct MyStruct<'a> {
    field: std::borrow::Cow<'a, u8>,
}

fn main() {}
